# SDF

./: .gitignore  CONTRIBUTING.md  HOW_TO_RUN.md  LICENSE.txt  README.md  package.json  pnpm-lock.yaml  railway.toml  vercel.json
.changeset/: plugin-runtime-phase0.md  plugin-runtime-phase2.md
apps/backend-sim/: main.py  package.json  pyproject.toml
apps/backend-sim/agents/: agent_c.py
apps/backend-sim/gateway/: ws_gateway.py
apps/backend-sim/plugins/: collector_registry.py  contracts.py  installed.py  pipeline_registry.py  simulator_collector.py
apps/backend-sim/simulator/: models.py  sensor_simulator.py
apps/backend-sim/tests/: test_agents.py  test_collector_registry.py  test_contracts.py  test_detail_simulator.py  test_installed.py  test_pipeline_registry.py  test_plugin_integration.py  test_simulator.py  test_simulator_collector.py
apps/host-twin/: package.json  vercel.json
backend/: .env  main.py  requirements.txt
backend/agents/: agent_a.py  agent_b.py  agent_c.py  orchestrator.py
backend/gateway/: event_bus.py  ws_gateway.py
backend/simulator/: detail_simulator.py  sensor_simulator.py
backend/tests/: test_agents.py  test_models.py
docs/: AIAgents.md  ARCHITECTURE.ko.md  ARCHITECTURE.md  DISTRIBUTION.md  FEATURES.md  IDEAS.ko.md  IDEAS.md  PRD.ko.md  PRD.md  PUBLISHING.md  SKILLS.ko.md  SKILLS.md  Skill.md
frontend/: package-lock.json  package.json  vercel.json  vitest.config.ts
frontend/__tests__/: DashboardErrorBoundary.test.tsx  configSerialization.test.ts  factoryStore.test.ts  formulaEngine.test.ts
scripts/: create-plugin.mjs
(+94 files in other folders)
