[project]
name = "sdf-digital-twin-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "anthropic>=0.28.0",
    "python-dotenv==1.0.1",
    "pydantic>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
]

[tool.uv]
